fix contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -293,6 +293,12 @@ footer {
   width: 80vw;
   max-height: 220px;
 }
+
+#discover #card10 {
+  text-align: center;
+  font-weight: bold;
+}
+
 /* Styles for join.html */
 
 /* Styles for base.css */
@@ -453,8 +459,6 @@ footer {
     grid-row: 5/6;
     width: 100%;
     height: 100%;
-    text-align: center;
-    font-weight: bold;
   }
 
   .div2-hdr {
